Implements Self-Awareness 2 operations and fixes Declaration of Work process