@@ -2,15 +2,19 @@ package gr.atc.modapto.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import gr.atc.modapto.dto.dt.DtInputDto;
-import gr.atc.modapto.dto.dt.DtResponseDto;
 import gr.atc.modapto.dto.serviceInvocations.SewSelfAwarenessMonitoringKpisInputDto;
+import gr.atc.modapto.dto.serviceInvocations.SewSelfAwarenessRealTimeMonitoringInputDto;
 import gr.atc.modapto.dto.serviceResults.sew.SewSelfAwarenessMonitoringKpisResultsDto;
-import gr.atc.modapto.enums.ModaptoHeader;
+import gr.atc.modapto.dto.serviceResults.sew.SewSelfAwarenessRealTimeMonitoringResultsDto;
+import gr.atc.modapto.dto.sew.SewMonitorKpisComponentsDto;
+import gr.atc.modapto.exception.CustomExceptions;
 import gr.atc.modapto.exception.CustomExceptions.ResourceNotFoundException;
-import gr.atc.modapto.exception.CustomExceptions.SmartServiceInvocationException;
 import gr.atc.modapto.model.serviceResults.SewSelfAwarenessMonitoringKpisResults;
+import gr.atc.modapto.model.serviceResults.SewSelfAwarenessRealTimeMonitoringResults;
+import gr.atc.modapto.model.sew.SewMonitorKpisComponents;
+import gr.atc.modapto.repository.SewMonitorKpisComponentsRepository;
 import gr.atc.modapto.repository.SewSelfAwarenessMonitoringKpisResultsRepository;
+import gr.atc.modapto.repository.SewSelfAwarenessRealTimeMonitoringResultsRepository;
 import gr.atc.modapto.service.processors.NoOpResponseProcessor;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -21,25 +25,33 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 
-import gr.atc.modapto.dto.sew.SewMonitorKpisComponentsDto;
-
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("SelfAwarenessService Unit Tests")
+@DisplayName("SelfAwarenessService Tests")
 class SelfAwarenessServiceTests {
 
     @Mock
     private SewSelfAwarenessMonitoringKpisResultsRepository sewSelfAwarenessMonitoringKpisResultsRepository;
+
+    @Mock
+    private SewSelfAwarenessRealTimeMonitoringResultsRepository sewSelfAwarenessRealTimeMonitoringResultsRepository;
+
+    @Mock
+    private SewMonitorKpisComponentsRepository sewMonitorKpisComponentsRepository;
 
     @Mock
     private SmartServicesInvocationService smartServicesInvocationService;
@@ -59,289 +71,535 @@ class SelfAwarenessServiceTests {
     @InjectMocks
     private SelfAwarenessService selfAwarenessService;
 
-    private SewSelfAwarenessMonitoringKpisInputDto sampleInputDto;
-    private SewSelfAwarenessMonitoringKpisResultsDto sampleResultDto;
+    private SewSelfAwarenessMonitoringKpisInputDto monitoringKpisInput;
+    private SewSelfAwarenessRealTimeMonitoringInputDto realTimeMonitoringInput;
+    private SewMonitorKpisComponentsDto componentsDto;
+    private SewMonitorKpisComponents componentsEntity;
+    private SewSelfAwarenessMonitoringKpisResults monitoringKpisEntity;
+    private SewSelfAwarenessMonitoringKpisResultsDto monitoringKpisDto;
+    private SewSelfAwarenessRealTimeMonitoringResults realTimeMonitoringEntity;
+    private SewSelfAwarenessRealTimeMonitoringResultsDto realTimeMonitoringDto;
 
     @BeforeEach
     void setUp() {
-        SewMonitorKpisComponentsDto components = SewMonitorKpisComponentsDto.builder()
-                .stage("Stage1")
-                .cell("Cell1")
-                .plc("PLC1")
-                .module("Module1")
-                .subElement("SubElement1")
-                .component("Component1")
-                .property(Collections.singletonList(
-                        SewMonitorKpisComponentsDto.PropertyDto.builder()
-                                .name("Temperature")
-                                .lowThreshold(10)
-                                .highThreshold(80)
-                                .build()
-                ))
+        monitoringKpisInput = SewSelfAwarenessMonitoringKpisInputDto.builder()
+                .smartServiceId("SA1_SERVICE_ID")
+                .moduleId("TEST_MODULE")
+                .startDate("2025-01-01T00:00:00")
+                .endDate("2025-01-31T23:59:59")
+                .components(new ArrayList<>())
                 .build();
 
-        sampleInputDto = SewSelfAwarenessMonitoringKpisInputDto.builder()
+        realTimeMonitoringInput = SewSelfAwarenessRealTimeMonitoringInputDto.builder()
+                .smartServiceId("SA2_SERVICE_ID")
                 .moduleId("TEST_MODULE")
-                .smartServiceId("SELF_AWARENESS_SERVICE")
-                .startDate("Start_Date")
-                .endDate("End_Date")
-                .components(List.of(components))
+                .components(new ArrayList<>())
                 .build();
 
-        SewSelfAwarenessMonitoringKpisResults sampleEntity = new SewSelfAwarenessMonitoringKpisResults();
-        sampleEntity.setId("test-id");
-        sampleEntity.setModuleId("TEST_MODULE");
-        sampleEntity.setSmartServiceId("SELF_AWARENESS_SERVICE");
-        sampleEntity.setTimestamp("2024-01-15T10:30:00Z");
-        sampleEntity.setLigne("Line1");
-        sampleEntity.setComponent("Component1");
-        sampleEntity.setVariable("Temperature");
-        sampleEntity.setStartingDate("2024-01-15T00:00:00Z");
-        sampleEntity.setEndingDate("2024-01-15T23:59:59Z");
-        sampleEntity.setDataSource("Sensor_Data");
-        sampleEntity.setBucket("hourly");
-        sampleEntity.setData(Arrays.asList(25.5, 26.1, 27.3, 28.0));
-
-        sampleResultDto = SewSelfAwarenessMonitoringKpisResultsDto.builder()
-                .id("test-id")
-                .timestamp("2024-01-15T10:30:00Z")
+        componentsDto = SewMonitorKpisComponentsDto.builder()
+                .id("TEST_ID")
                 .moduleId("TEST_MODULE")
-                .smartServiceId("SELF_AWARENESS_SERVICE")
-                .ligne("Line1")
-                .component("Component1")
-                .variable("Temperature")
-                .startingDate("2024-01-15T00:00:00Z")
-                .endingDate("2024-01-15T23:59:59Z")
-                .dataSource("Sensor_Data")
-                .bucket("hourly")
-                .data(Arrays.asList(25.5, 26.1, 27.3, 28.0))
+                .timestampCreated(LocalDateTime.now())
+                .components(new ArrayList<>())
+                .build();
+
+        componentsEntity = SewMonitorKpisComponents.builder()
+                .id("TEST_ID")
+                .moduleId("TEST_MODULE")
+                .timestampCreated(LocalDateTime.now())
+                .components(new ArrayList<>())
+                .build();
+
+        monitoringKpisEntity = SewSelfAwarenessMonitoringKpisResults.builder()
+                .id("RESULT_ID")
+                .moduleId("TEST_MODULE")
+                .timestamp(LocalDateTime.now())
+                .smartServiceId("SA1_SERVICE_ID")
+                .ligne("LINE_001")
+                .component("COMPONENT_001")
+                .variable("VARIABLE_001")
+                .startingDate("2025-01-01T00:00:00")
+                .endingDate("2025-01-31T23:59:59")
+                .dataSource("TEST_SOURCE")
+                .bucket("TEST_BUCKET")
+                .data(List.of(10.5, 20.3, 15.7))
+                .build();
+
+        monitoringKpisDto = SewSelfAwarenessMonitoringKpisResultsDto.builder()
+                .id("RESULT_ID")
+                .moduleId("TEST_MODULE")
+                .timestamp(LocalDateTime.now())
+                .smartServiceId("SA1_SERVICE_ID")
+                .ligne("LINE_001")
+                .component("COMPONENT_001")
+                .variable("VARIABLE_001")
+                .startingDate("2025-01-01T00:00:00")
+                .endingDate("2025-01-31T23:59:59")
+                .dataSource("TEST_SOURCE")
+                .bucket("TEST_BUCKET")
+                .data(List.of(10.5, 20.3, 15.7))
+                .build();
+
+        realTimeMonitoringEntity = SewSelfAwarenessRealTimeMonitoringResults.builder()
+                .id("RT_RESULT_ID")
+                .moduleId("TEST_MODULE")
+                .timestamp(LocalDateTime.now())
+                .smartServiceId("SA2_SERVICE_ID")
+                .ligne("LINE_001")
+                .component("COMPONENT_001")
+                .variable("VARIABLE_001")
+                .startingDate("2025-01-01T00:00:00")
+                .endingDate("2025-01-31T23:59:59")
+                .dataSource("TEST_SOURCE")
+                .bucket("TEST_BUCKET")
+                .data(List.of(10.5, 20.3, 15.7))
+                .build();
+
+        realTimeMonitoringDto = SewSelfAwarenessRealTimeMonitoringResultsDto.builder()
+                .id("RT_RESULT_ID")
+                .moduleId("TEST_MODULE")
+                .timestamp(LocalDateTime.of(2025, 1, 1, 10, 0, 0))
+                .smartServiceId("SA2_SERVICE_ID")
+                .ligne("LINE_001")
+                .component("COMPONENT_001")
+                .variable("VARIABLE_001")
+                .startingDate("2025-01-01T00:00:00")
+                .endingDate("2025-01-31T23:59:59")
+                .dataSource("TEST_SOURCE")
+                .bucket("TEST_BUCKET")
+                .data(List.of(10.5, 20.3, 15.7))
                 .build();
     }
 
     @Nested
-    @DisplayName("Invoke Self-Awareness Monitoring KPIs Algorithm")
-    class InvokeSelfAwarenessMonitoringKpisAlgorithm {
+    @DisplayName("When invoking Self-Awareness algorithms")
+    class AlgorithmInvocation {
 
         @Test
-        @DisplayName("Invoke algorithm : Success")
-        void givenValidInput_whenInvokeAlgorithm_thenInvokesSuccessfully() throws JsonProcessingException {
+        @DisplayName("Invoke Self-Awareness Monitoring KPIs algorithm : Success")
+        void givenValidInput_whenInvokeMonitoringKpisAlgorithm_thenInvokeSuccessfully() throws JsonProcessingException {
             // Given
-            when(objectMapper.writeValueAsString(sampleInputDto)).thenReturn("{\"mockJson\":\"data\"}");
-            ResponseEntity<DtResponseDto> mockResponse = new ResponseEntity<>(new DtResponseDto(), HttpStatus.OK);
-            when(smartServicesInvocationService.invokeSmartService(
-                    anyString(), anyString(), any(DtInputDto.class), any(ModaptoHeader.class)))
-                    .thenReturn(mockResponse);
-            when(noOpResponseProcessor.processResponse(any(), anyString(), anyString()))
-                    .thenReturn(null);
+            when(objectMapper.writeValueAsString(any())).thenReturn("{\"mockJson\":\"data\"}");
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq("TEST_MODULE"))).thenReturn(Optional.of(componentsEntity));
+            lenient().when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
 
             // When
-            selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(sampleInputDto);
+            assertDoesNotThrow(() -> selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(monitoringKpisInput));
 
             // Then
-            verify(objectMapper).writeValueAsString(sampleInputDto);
-            verify(smartServicesInvocationService).invokeSmartService(
-                    eq("SELF_AWARENESS_SERVICE"), eq("TEST_MODULE"), any(DtInputDto.class), eq(ModaptoHeader.ASYNC));
-            verify(noOpResponseProcessor).processResponse(mockResponse, "TEST_MODULE", "SELF_AWARENESS_SERVICE");
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq("TEST_MODULE"));
         }
 
         @Test
-        @DisplayName("Invoke algorithm : JSON processing exception")
-        void givenJsonProcessingError_whenInvokeAlgorithm_thenThrowsSmartServiceInvocationException() throws JsonProcessingException {
+        @DisplayName("Invoke Self-Awareness Real-Time Monitoring algorithm : Success")
+        void givenValidInput_whenInvokeRealTimeMonitoringAlgorithm_thenInvokeSuccessfully() throws JsonProcessingException {
             // Given
-            when(objectMapper.writeValueAsString(sampleInputDto))
-                    .thenThrow(new JsonProcessingException("JSON error") {});
+            when(objectMapper.writeValueAsString(any())).thenReturn("{\"mockJson\":\"data\"}");
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq("TEST_MODULE"))).thenReturn(Optional.of(componentsEntity));
+            lenient().when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
 
-            // When & Then
-            assertThatThrownBy(() -> selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(sampleInputDto))
-                    .isInstanceOf(SmartServiceInvocationException.class)
-                    .hasMessage("Unable to convert Self-Awareness Monitoring KPIs input to Base64 Encoding");
+            // When
+            assertDoesNotThrow(() -> selfAwarenessService.invokeSelfAwarenessRealTimeMonitoringAlgorithm(realTimeMonitoringInput));
 
-            verify(objectMapper).writeValueAsString(sampleInputDto);
-            verify(smartServicesInvocationService, never()).invokeSmartService(any(), any(), any(), any());
-            verify(noOpResponseProcessor, never()).processResponse(any(), any(), any());
+            // Then
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq("TEST_MODULE"));
         }
 
         @Test
-        @DisplayName("Invoke algorithm : Smart service invocation failure")
-        void givenSmartServiceFailure_whenInvokeAlgorithm_thenThrowsException() throws JsonProcessingException {
+        @DisplayName("Invoke algorithm when components not found : Throw exception")
+        void givenModuleWithoutComponents_whenInvokeAlgorithm_thenThrowException() {
             // Given
-            when(objectMapper.writeValueAsString(sampleInputDto)).thenReturn("{\"mockJson\":\"data\"}");
-            when(smartServicesInvocationService.invokeSmartService(
-                    anyString(), anyString(), any(DtInputDto.class), any(ModaptoHeader.class)))
-                    .thenThrow(new RuntimeException("Service invocation failed"));
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq("TEST_MODULE"))).thenReturn(Optional.empty());
+            lenient().when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
 
             // When & Then
-            assertThatThrownBy(() -> selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(sampleInputDto))
-                    .isInstanceOf(RuntimeException.class)
-                    .hasMessage("Service invocation failed");
+            assertThrows(CustomExceptions.SmartServiceInvocationException.class, () ->
+                selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(monitoringKpisInput));
 
-            verify(objectMapper).writeValueAsString(sampleInputDto);
-            verify(smartServicesInvocationService).invokeSmartService(
-                    eq("SELF_AWARENESS_SERVICE"), eq("TEST_MODULE"), any(DtInputDto.class), eq(ModaptoHeader.ASYNC));
-            verify(noOpResponseProcessor, never()).processResponse(any(), any(), any());
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq("TEST_MODULE"));
         }
     }
 
     @Nested
-    @DisplayName("Retrieve Latest Self-Awareness Monitoring KPIs Results")
-    class RetrieveLatestSelfAwarenessMonitoringKpisResults {
+    @DisplayName("When retrieving Monitoring KPIs results")
+    class MonitoringKpisResultsRetrieval {
 
         @Test
-        @DisplayName("Retrieve latest results : Success")
-        void givenExistingResults_whenRetrieveLatest_thenReturnsLatestResult() {
+        @DisplayName("Retrieve latest Monitoring KPIs results : Success")
+        void whenRetrieveLatestMonitoringKpisResults_thenReturnResults() {
             // Given
-            when(exceptionHandler.handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResults")))
-                    .thenReturn(sampleResultDto);
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findFirstByOrderByTimestampDesc()).thenReturn(Optional.of(monitoringKpisEntity));
+            when(modelMapper.map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class))).thenReturn(monitoringKpisDto);
 
             // When
             SewSelfAwarenessMonitoringKpisResultsDto result = selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResults();
 
             // Then
-            assertThat(result).isNotNull();
-            assertThat(result.getId()).isEqualTo("test-id");
-            assertThat(result.getModuleId()).isEqualTo("TEST_MODULE");
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResults"));
+            assertNotNull(result);
+            assertEquals("RESULT_ID", result.getId());
+            assertEquals("TEST_MODULE", result.getModuleId());
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findFirstByOrderByTimestampDesc();
+            verify(modelMapper, times(1)).map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class));
         }
 
         @Test
-        @DisplayName("Retrieve latest results : No results found")
-        void givenNoResults_whenRetrieveLatest_thenThrowsResourceNotFoundException() {
-            // Given
-            when(exceptionHandler.handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResults")))
-                    .thenThrow(new ResourceNotFoundException("There are no available SEW Self-Awareness Monitoring KPIs results"));
-
-            // When & Then
-            assertThatThrownBy(() -> selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResults())
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage("There are no available SEW Self-Awareness Monitoring KPIs results");
-
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResults"));
-        }
-    }
-
-    @Nested
-    @DisplayName("Retrieve Latest Self-Awareness Monitoring KPIs Results by Module ID")
-    class RetrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId {
-
-        @Test
-        @DisplayName("Retrieve latest results by module ID : Success")
-        void givenValidModuleId_whenRetrieveLatestByModuleId_thenReturnsLatestResult() {
+        @DisplayName("Retrieve latest Monitoring KPIs results by module ID : Success")
+        void givenModuleId_whenRetrieveLatestMonitoringKpisResultsByModuleId_thenReturnResults() {
             // Given
             String moduleId = "TEST_MODULE";
-            when(exceptionHandler.handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId")))
-                    .thenReturn(sampleResultDto);
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findFirstByModuleIdOrderByTimestampDesc(eq(moduleId))).thenReturn(Optional.of(monitoringKpisEntity));
+            when(modelMapper.map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class))).thenReturn(monitoringKpisDto);
 
             // When
-            SewSelfAwarenessMonitoringKpisResultsDto result = 
-                selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId(moduleId);
+            SewSelfAwarenessMonitoringKpisResultsDto result = selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId(moduleId);
 
             // Then
-            assertThat(result).isNotNull();
-            assertThat(result.getId()).isEqualTo("test-id");
-            assertThat(result.getModuleId()).isEqualTo("TEST_MODULE");
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId"));
+            assertNotNull(result);
+            assertEquals("RESULT_ID", result.getId());
+            assertEquals("TEST_MODULE", result.getModuleId());
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findFirstByModuleIdOrderByTimestampDesc(eq(moduleId));
         }
 
         @Test
-        @DisplayName("Retrieve latest results by module ID : No results found")
-        void givenNonExistentModuleId_whenRetrieveLatestByModuleId_thenThrowsResourceNotFoundException() {
+        @DisplayName("Retrieve all Monitoring KPIs results : Success")
+        void whenRetrieveAllMonitoringKpisResults_thenReturnResultsList() {
             // Given
-            String moduleId = "NON_EXISTENT_MODULE";
-            when(exceptionHandler.handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId")))
-                    .thenThrow(new ResourceNotFoundException("There are no available SEW Self-Awareness Monitoring KPIs results for Module ID: " + moduleId));
-
-            // When & Then
-            assertThatThrownBy(() -> selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId(moduleId))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessage("There are no available SEW Self-Awareness Monitoring KPIs results for Module ID: NON_EXISTENT_MODULE");
-
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveLatestSelfAwarenessMonitoringKpisResultsByModuleId"));
-        }
-    }
-
-    @Nested
-    @DisplayName("Retrieve All Self-Awareness Monitoring KPIs Results")
-    class RetrieveAllSelfAwarenessMonitoringKpisResults {
-
-        @Test
-        @DisplayName("Retrieve all results : Success")
-        void givenExistingResults_whenRetrieveAll_thenReturnsAllResults() {
-            // Given
-            List<SewSelfAwarenessMonitoringKpisResultsDto> expectedResults = Collections.singletonList(sampleResultDto);
-
-            when(exceptionHandler.handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResults")))
-                    .thenReturn(expectedResults);
+            Page<SewSelfAwarenessMonitoringKpisResults> page = new PageImpl<>(List.of(monitoringKpisEntity));
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findAll(any(Pageable.class))).thenReturn(page);
+            when(modelMapper.map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class))).thenReturn(monitoringKpisDto);
 
             // When
-            List<SewSelfAwarenessMonitoringKpisResultsDto> results = 
-                selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResults();
+            List<SewSelfAwarenessMonitoringKpisResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResults();
 
             // Then
-            assertThat(results).isNotNull();
-            assertThat(results).hasSize(1);
-            assertThat(results.getFirst().getId()).isEqualTo("test-id");
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResults"));
+            assertNotNull(results);
+            assertEquals(1, results.size());
+            assertEquals("RESULT_ID", results.get(0).getId());
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findAll(any(Pageable.class));
         }
 
         @Test
-        @DisplayName("Retrieve all results : Empty list")
-        void givenNoResults_whenRetrieveAll_thenReturnsEmptyList() {
-            // Given
-            when(exceptionHandler.handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResults")))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            List<SewSelfAwarenessMonitoringKpisResultsDto> results = 
-                selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResults();
-
-            // Then
-            assertThat(results).isNotNull();
-            assertThat(results).isEmpty();
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResults"));
-        }
-    }
-
-    @Nested
-    @DisplayName("Retrieve All Self-Awareness Monitoring KPIs Results by Module ID")
-    class RetrieveAllSelfAwarenessMonitoringKpisResultsByModuleId {
-
-        @Test
-        @DisplayName("Retrieve all results by module ID : Success")
-        void givenValidModuleId_whenRetrieveAllByModuleId_thenReturnsAllResultsForModule() {
+        @DisplayName("Retrieve all Monitoring KPIs results by module ID : Success")
+        void givenModuleId_whenRetrieveAllMonitoringKpisResultsByModuleId_thenReturnResultsList() {
             // Given
             String moduleId = "TEST_MODULE";
-            List<SewSelfAwarenessMonitoringKpisResultsDto> expectedResults = Collections.singletonList(sampleResultDto);
-
-            when(exceptionHandler.handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId")))
-                    .thenReturn(expectedResults);
+            Page<SewSelfAwarenessMonitoringKpisResults> page = new PageImpl<>(List.of(monitoringKpisEntity));
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findByModuleId(eq(moduleId), any(Pageable.class))).thenReturn(page);
+            when(modelMapper.map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class))).thenReturn(monitoringKpisDto);
 
             // When
-            List<SewSelfAwarenessMonitoringKpisResultsDto> results = 
-                selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId(moduleId);
+            List<SewSelfAwarenessMonitoringKpisResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId(moduleId);
 
             // Then
-            assertThat(results).isNotNull();
-            assertThat(results).hasSize(1);
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId"));
+            assertNotNull(results);
+            assertEquals(1, results.size());
+            assertEquals("RESULT_ID", results.get(0).getId());
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findByModuleId(eq(moduleId), any(Pageable.class));
         }
 
         @Test
-        @DisplayName("Retrieve all results by module ID : Empty list")
-        void givenNonExistentModuleId_whenRetrieveAllByModuleId_thenReturnsEmptyList() {
+        @DisplayName("Retrieve latest results when none found : Throw exception")
+        void whenRetrieveLatestResults_andNoneFound_thenThrowException() {
             // Given
-            String moduleId = "NON_EXISTENT_MODULE";
-            
-            when(exceptionHandler.handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId")))
-                    .thenReturn(Collections.emptyList());
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findFirstByOrderByTimestampDesc()).thenReturn(Optional.empty());
+
+            // When & Then
+            assertThrows(ResourceNotFoundException.class, () ->
+                selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResults());
+
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findFirstByOrderByTimestampDesc();
+        }
+
+        @Test
+        @DisplayName("Retrieve results with empty list : Return empty list")
+        void whenRetrieveAllResults_andRepositoryReturnsEmpty_thenReturnEmptyList() {
+            // Given
+            Page<SewSelfAwarenessMonitoringKpisResults> emptyPage = new PageImpl<>(Collections.emptyList());
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findAll(any(Pageable.class))).thenReturn(emptyPage);
 
             // When
-            List<SewSelfAwarenessMonitoringKpisResultsDto> results = 
-                selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId(moduleId);
+            List<SewSelfAwarenessMonitoringKpisResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessMonitoringKpisResults();
 
             // Then
-            assertThat(results).isNotNull();
-            assertThat(results).isEmpty();
-            verify(exceptionHandler).handleOperation(any(), eq("retrieveAllSelfAwarenessMonitoringKpisResultsByModuleId"));
+            assertNotNull(results);
+            assertTrue(results.isEmpty());
+            verify(sewSelfAwarenessMonitoringKpisResultsRepository, times(1)).findAll(any(Pageable.class));
+        }
+    }
+
+    @Nested
+    @DisplayName("When retrieving Real-Time Monitoring results")
+    class RealTimeMonitoringResultsRetrieval {
+
+        @Test
+        @DisplayName("Retrieve all Real-Time Monitoring results : Success")
+        void whenRetrieveAllRealTimeMonitoringResults_thenReturnResultsList() {
+            // Given
+            Page<SewSelfAwarenessRealTimeMonitoringResults> page = new PageImpl<>(List.of(realTimeMonitoringEntity));
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessRealTimeMonitoringResultsRepository.findAll(any(Pageable.class))).thenReturn(page);
+            when(modelMapper.map(eq(realTimeMonitoringEntity), eq(SewSelfAwarenessRealTimeMonitoringResultsDto.class))).thenReturn(realTimeMonitoringDto);
+
+            // When
+            List<SewSelfAwarenessRealTimeMonitoringResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessRealTimeMonitoringResults();
+
+            // Then
+            assertNotNull(results);
+            assertEquals(1, results.size());
+            assertEquals("RT_RESULT_ID", results.get(0).getId());
+            verify(sewSelfAwarenessRealTimeMonitoringResultsRepository, times(1)).findAll(any(Pageable.class));
+        }
+
+        @Test
+        @DisplayName("Retrieve all Real-Time Monitoring results by module ID : Success")
+        void givenModuleId_whenRetrieveAllRealTimeMonitoringResultsByModuleId_thenReturnResultsList() {
+            // Given
+            String moduleId = "TEST_MODULE";
+            Page<SewSelfAwarenessRealTimeMonitoringResults> page = new PageImpl<>(List.of(realTimeMonitoringEntity));
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessRealTimeMonitoringResultsRepository.findByModuleId(eq(moduleId), any(Pageable.class))).thenReturn(page);
+            when(modelMapper.map(eq(realTimeMonitoringEntity), eq(SewSelfAwarenessRealTimeMonitoringResultsDto.class))).thenReturn(realTimeMonitoringDto);
+
+            // When
+            List<SewSelfAwarenessRealTimeMonitoringResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessRealTimeMonitoringResultsByModuleId(moduleId);
+
+            // Then
+            assertNotNull(results);
+            assertEquals(1, results.size());
+            assertEquals("RT_RESULT_ID", results.get(0).getId());
+            verify(sewSelfAwarenessRealTimeMonitoringResultsRepository, times(1)).findByModuleId(eq(moduleId), any(Pageable.class));
+        }
+
+        @Test
+        @DisplayName("Retrieve Real-Time Monitoring results with empty list : Return empty list")
+        void whenRetrieveAllRealTimeResults_andRepositoryReturnsEmpty_thenReturnEmptyList() {
+            // Given
+            Page<SewSelfAwarenessRealTimeMonitoringResults> emptyPage = new PageImpl<>(Collections.emptyList());
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessRealTimeMonitoringResultsRepository.findAll(any(Pageable.class))).thenReturn(emptyPage);
+
+            // When
+            List<SewSelfAwarenessRealTimeMonitoringResultsDto> results = selfAwarenessService.retrieveAllSelfAwarenessRealTimeMonitoringResults();
+
+            // Then
+            assertNotNull(results);
+            assertTrue(results.isEmpty());
+            verify(sewSelfAwarenessRealTimeMonitoringResultsRepository, times(1)).findAll(any(Pageable.class));
+        }
+    }
+
+    @Nested
+    @DisplayName("When managing component lists")
+    class ComponentListManagement {
+
+        @Test
+        @DisplayName("Upload component list for new module : Success")
+        void givenNewModuleComponents_whenUploadComponentList_thenSaveSuccessfully() {
+            // Given
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq("TEST_MODULE"))).thenReturn(Optional.empty());
+            when(modelMapper.map(eq(componentsDto), eq(SewMonitorKpisComponents.class))).thenReturn(componentsEntity);
+            when(sewMonitorKpisComponentsRepository.save(any(SewMonitorKpisComponents.class))).thenReturn(componentsEntity);
+
+            // When
+            assertDoesNotThrow(() -> selfAwarenessService.uploadModuleComponentsList(componentsDto));
+
+            // Then
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq("TEST_MODULE"));
+            verify(sewMonitorKpisComponentsRepository, never()).deleteByModuleId(any());
+            verify(sewMonitorKpisComponentsRepository, times(1)).save(any(SewMonitorKpisComponents.class));
+        }
+
+        @Test
+        @DisplayName("Upload component list for existing module : Replace existing")
+        void givenExistingModuleComponents_whenUploadComponentList_thenReplaceExisting() {
+            // Given
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq("TEST_MODULE"))).thenReturn(Optional.of(componentsEntity));
+            when(modelMapper.map(eq(componentsDto), eq(SewMonitorKpisComponents.class))).thenReturn(componentsEntity);
+            when(sewMonitorKpisComponentsRepository.save(any(SewMonitorKpisComponents.class))).thenReturn(componentsEntity);
+
+            // When
+            assertDoesNotThrow(() -> selfAwarenessService.uploadModuleComponentsList(componentsDto));
+
+            // Then
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq("TEST_MODULE"));
+            verify(sewMonitorKpisComponentsRepository, times(1)).deleteByModuleId(eq("TEST_MODULE"));
+            verify(sewMonitorKpisComponentsRepository, times(1)).save(any(SewMonitorKpisComponents.class));
+        }
+
+        @Test
+        @DisplayName("Retrieve component list by module ID : Success")
+        void givenModuleId_whenRetrieveComponentList_thenReturnComponentList() {
+            // Given
+            String moduleId = "TEST_MODULE";
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq(moduleId))).thenReturn(Optional.of(componentsEntity));
+            when(modelMapper.map(eq(componentsEntity), eq(SewMonitorKpisComponentsDto.class))).thenReturn(componentsDto);
+
+            // When
+            SewMonitorKpisComponentsDto result = selfAwarenessService.retrieveSelfAwarenessComponentListByModuleId(moduleId);
+
+            // Then
+            assertNotNull(result);
+            assertEquals("TEST_ID", result.getId());
+            assertEquals("TEST_MODULE", result.getModuleId());
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq(moduleId));
+            verify(modelMapper, times(1)).map(eq(componentsEntity), eq(SewMonitorKpisComponentsDto.class));
+        }
+
+        @Test
+        @DisplayName("Retrieve component list when not found : Throw exception")
+        void givenNonexistentModuleId_whenRetrieveComponentList_thenThrowException() {
+            // Given
+            String moduleId = "NONEXISTENT_MODULE";
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq(moduleId))).thenReturn(Optional.empty());
+
+            // When & Then
+            assertThrows(ResourceNotFoundException.class, () ->
+                selfAwarenessService.retrieveSelfAwarenessComponentListByModuleId(moduleId));
+
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq(moduleId));
+        }
+
+        @Test
+        @DisplayName("Delete component list by module ID : Success")
+        void givenModuleId_whenDeleteComponentList_thenDeleteSuccessfully() {
+            // Given
+            String moduleId = "TEST_MODULE";
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq(moduleId))).thenReturn(Optional.of(componentsEntity));
+
+            // When
+            assertDoesNotThrow(() -> selfAwarenessService.deleteSelfAwarenessComponentListByModuleId(moduleId));
+
+            // Then
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq(moduleId));
+            verify(sewMonitorKpisComponentsRepository, times(1)).deleteByModuleId(eq(moduleId));
+        }
+
+        @Test
+        @DisplayName("Delete component list when not found : Throw exception")
+        void givenNonexistentModuleId_whenDeleteComponentList_thenThrowException() {
+            // Given
+            String moduleId = "NONEXISTENT_MODULE";
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewMonitorKpisComponentsRepository.findByModuleId(eq(moduleId))).thenReturn(Optional.empty());
+
+            // When & Then
+            assertThrows(ResourceNotFoundException.class, () ->
+                selfAwarenessService.deleteSelfAwarenessComponentListByModuleId(moduleId));
+
+            verify(sewMonitorKpisComponentsRepository, times(1)).findByModuleId(eq(moduleId));
+            verify(sewMonitorKpisComponentsRepository, never()).deleteByModuleId(any());
+        }
+    }
+
+    @Nested
+    @DisplayName("When handling edge cases and error scenarios")
+    class EdgeCasesAndErrors {
+
+        @Test
+        @DisplayName("Handle null input parameters gracefully")
+        void givenNullInput_whenInvokeAlgorithm_thenHandleGracefully() {
+            // When & Then
+            assertThrows(CustomExceptions.SmartServiceInvocationException.class, () ->
+                selfAwarenessService.invokeSelfAwarenessMonitoringKpisAlgorithm(null));
+        }
+
+        @Test
+        @DisplayName("Handle repository exceptions during retrieval")
+        void whenRepositoryThrowsException_thenPropagateException() {
+            // Given
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findFirstByOrderByTimestampDesc())
+                    .thenThrow(new RuntimeException("Database error"));
+
+            // When & Then
+            assertThrows(RuntimeException.class, () ->
+                selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResults());
+        }
+
+        @Test
+        @DisplayName("Handle mapping exceptions during entity conversion")
+        void whenMappingFails_thenPropagateException() {
+            // Given
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+            when(sewSelfAwarenessMonitoringKpisResultsRepository.findFirstByOrderByTimestampDesc()).thenReturn(Optional.of(monitoringKpisEntity));
+            when(modelMapper.map(eq(monitoringKpisEntity), eq(SewSelfAwarenessMonitoringKpisResultsDto.class)))
+                    .thenThrow(new RuntimeException("Mapping error"));
+
+            // When & Then
+            assertThrows(RuntimeException.class, () ->
+                selfAwarenessService.retrieveLatestSelfAwarenessMonitoringKpisResults());
+        }
+
+        @Test
+        @DisplayName("Handle component upload with null components list")
+        void givenComponentsDataWithNullList_whenUploadComponentList_thenHandleGracefully() {
+            // Given
+            SewMonitorKpisComponentsDto invalidDto = SewMonitorKpisComponentsDto.builder()
+                    .moduleId("TEST_MODULE")
+                    .components(null)
+                    .build();
+
+            // Mock modelMapper to return null for invalid DTO
+            when(modelMapper.map(invalidDto, SewMonitorKpisComponents.class)).thenReturn(null);
+
+            when(exceptionHandler.handleOperation(any(), any())).thenAnswer(invocation -> {
+                return ((java.util.function.Supplier<?>) invocation.getArgument(0)).get();
+            });
+
+            // When & Then - Expect NullPointerException due to null entity
+            assertThrows(NullPointerException.class, () ->
+                selfAwarenessService.uploadModuleComponentsList(invalidDto));
         }
     }
 }
